[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/entity/slime/range_water_attack.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Slime/Water_projectile.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/white_circle_explosion.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -12.5, 8, -8, 0, 0, -2, 8, 0, 12.5, 8 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.8 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
max_value = 0.7
_data = [ Vector2( 0, 0.7 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.2
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Curve" id=7]
max_value = 180.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 180 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.5
flag_rotate_y = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 0.5
angle_curve = SubResource( 8 )
scale_random = 1.0
scale_curve = SubResource( 10 )

[node name="Water_projectile" type="Area2D"]
modulate = Color( 0.756863, 0.984314, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Death_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Tail" type="Particles2D" parent="."]
amount = 10
lifetime = 0.4
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 0.250284 )
scale = Vector2( 0.775789, 0.775789 )
texture = ExtResource( 1 )

[node name="Death_explosion" type="Particles2D" parent="."]
emitting = false
amount = 2
one_shot = true
preprocess = 0.2
explosiveness = 0.75
process_material = SubResource( 11 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Water_projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Water_projectile_body_entered"]
[connection signal="timeout" from="Death_timer" to="." method="_on_Death_timer_timeout"]
